fixed main page top carousel wrapping after projects filtering + minor tags search box styling

--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -25,12 +25,25 @@
         .btn-default();
         .btn-xs();
     }
+    .tag-show-all {
+      background-color: #EFEFEF;
+      color: #777;
+    }
     .tag.selected {
         .btn-primary();
+    }
+    .tags-title {
+      margin-top: 20px;
+      h4 {
+        margin: 0;
+      }
     }
 }
 
 .projects {
+    .projects-list-title {
+      margin: 20px 0;
+    }
     .project-block {
         margin-bottom: 40px;
         .project-block-image {
